Modernize FilesystemSchemaSourceCache
Use java.nio.Path instead of java.io.File.

Change-Id: Ibc28950f5969ae953d83cd1522734a9584f01c4c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>